# git_to_sticker

./: Cargo.toml  README.md
.github/workflows/: rust-release.yml
src/: main.rs  telegram_api.rs
