[package]
name = "git_to_sticker"
version = "0.1.0"
authors = ["Kolya Opahle <kolyaopahle@gmail.com>", "Milan Proell <milan.proell@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.42"
reqwest = { version = "0.10.1", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "0.2.9", features= ["full"] }
log = "0.4.10"
pretty_env_logger = "0.3.1"