[package]
name = "git_to_sticker"
version = "0.1.0"
authors = ["Kolya Opahle <kolyaopahle@gmail.com>", "Milan Proell <milan.proell@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.6"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
reqwest = { version = "0.10.6", features = ["json"] }
dotenv = "0.15.0"
tokio = { version = "0.2.21", features= ["full"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"